--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,119 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        .container {
-            margin: 30px auto;
-        }
-
-        table, td {
-            border: 1px solid gray;
-        }
-    </style>
+    <title>个人主页</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-<div class="container">
+<div style="text-align:center">
     <table>
         <tr>
-            <td>呢称</td>
-            <td><%= user.nickname %></td>
+            <td>字段</td>
+            <td>值</td>
+        </tr>
+        <tr>
+            <td>用户名</td>
+            <td><%=userInfo.nickname%></td>
         </tr>
         <tr>
             <td>头像</td>
-            <td><img src="<%= user.headimgurl %>"></td>
-        </tr>
-        <tr>
-            <td>性别</td>
-            <td><%= user.sex==0?'女':'男' %></td>
-        </tr>
-        <tr>
-            <td>省</td>
-            <td><%= user.province %></td>
-        </tr>
-        <tr>
-            <td>市</td>
-            <td><%= user.city %></td>
+            <td><img style="width:100px;height:100px;" src="<%=userInfo.headimgurl%>" alt=""></td>
         </tr>
     </table>
-
-    <p>
-        <button style="font-size:50px" href="#" onclick="share()">分享</button>
-    </p>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script>
-        wx.config({
-            debug: false,
-            appId: 'wx66e03833e73ef862',
-            timestamp: Date.now(),
-            nonceStr: 'IGV9X4WyN9eCO5p9',
-            signature: '635b522121687b5327256b143f2469791123ad83',
-            jsApiList: [
-                'checkJsApi',
-                'onMenuShareTimeline',
-                'onMenuShareAppMessage',
-                'onMenuShareQQ',
-                'onMenuShareWeibo',
-                'onMenuShareQZone',
-                'hideMenuItems',
-                'showMenuItems',
-                'hideAllNonBaseMenuItem',
-                'showAllNonBaseMenuItem',
-                'translateVoice',
-                'startRecord',
-                'stopRecord',
-                'onVoiceRecordEnd',
-                'playVoice',
-                'onVoicePlayEnd',
-                'pauseVoice',
-                'stopVoice',
-                'uploadVoice',
-                'downloadVoice',
-                'chooseImage',
-                'previewImage',
-                'uploadImage',
-                'downloadImage',
-                'getNetworkType',
-                'openLocation',
-                'getLocation',
-                'hideOptionMenu',
-                'showOptionMenu',
-                'closeWindow',
-                'scanQRCode',
-                'chooseWXPay',
-                'openProductSpecificView',
-                'addCard',
-                'chooseCard',
-                'openCard'
-            ]
-        });
-        wx.ready(function () {
-
-        });
-        wx.error(function (res) {
-
-        });
-        function share() {
-            wx.onMenuShareTimeline({
-                title: '互联网之子',
-                link: 'http://movie.douban.com/subject/25785114/',
-                imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
-                trigger: function (res) {
-                    // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
-                    alert('用户点击分享到朋友圈');
-                },
-                success: function (res) {
-                    alert('已分享');
-                },
-                cancel: function (res) {
-                    alert('已取消');
-                },
-                fail: function (res) {
-                    alert(JSON.stringify(res));
-                }
-            });
-        }
-    </script>
 </div>
+
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script>
+    alert(alert(location.href.split('#')[0]));
+    wx.config({
+        debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+        appId: '<%=APPID%>', // 必填，公众号的唯一标识
+        timestamp: '<%=timestamp%>', // 必填，生成签名的时间戳
+        nonceStr: '<%=noncestr%>', // 必填，生成签名的随机串
+        signature: '<%=signature%>',// 必填，签名，见附录1
+        jsApiList: [
+            "onMenuShareTimeline",
+            "onMenuShareAppMessage"
+        ] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+    });
+    wx.ready(function () {
+        wx.onMenuShareTimeline({
+            title: '<%=userInfo.nickname%>', // 分享标题
+            link: '<%=userInfo.city%>', // 分享链接
+            imgUrl: '<%=userInfo.headimgurl%>', // 分享图标
+            success: function () {
+                alert('分享给朋友圈成功');
+                // 用户确认分享后执行的回调函数
+            },
+            cancel: function () {
+                // 用户取消分享后执行的回调函数
+                alert('分享给朋友圈取消');
+            }
+        });
+        wx.onMenuShareAppMessage({
+            title: '<%=userInfo.nickname%>', // 分享标题
+            desc: '<%=userInfo.city%>', // 分享描述
+            link: 'http://www.baidu.com', // 分享链接
+            imgUrl: '<%=userInfo.headimgurl%>', // 分享图标
+            type: 'link', // 分享类型,music、video或link，不填默认为link
+            dataUrl: '<%=userInfo.city%>', // 如果type是music或video，则要提供数据链接，默认为空
+            success: function () {
+                // 用户确认分享后执行的回调函数
+                alert('分享给朋友成功');
+            },
+            cancel: function () {
+                // 用户取消分享后执行的回调函数
+                alert('分享给朋友取消');
+            }
+        });
+    });
+    wx.error(function (res) {
+
+    });
+
+</script>
 </body>
 </html>
